<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>amazinghand_bringup</n>
  <version>0.1.0</version>
  <description>
    Launch files and runtime configuration for the AmazingHand.
    hand.launch.py accepts hand_name, serial_port, use_sim, use_rviz arguments.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>amazinghand_hardware</exec_depend>
  <exec_depend>amazinghand_controller</exec_depend>
  <exec_depend>amazinghand_description</exec_depend>
  <exec_depend>amazinghand_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
